[package]
name = "bench_rocksdb_write"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "rocksdb_write"
harness = false

[dependencies]
rand = "0.8.5"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
